environments/staging/patch-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navosec-admin
  namespace: navosec-admin
spec:
  replicas: 2
